switch conditional logic in code examples

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -101,7 +101,15 @@ In the following example, the user's first name is updated to "Test".
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.update({ firstName: "Test" })
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -109,8 +117,6 @@ In the following example, the user's first name is updated to "Test".
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.update({ firstName: "Test" });
   }
   ```
 
@@ -119,7 +125,15 @@ In the following example, the user's first name is updated to "Test".
     window.addEventListener('load', async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.update({ firstName: "Test" })
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -127,8 +141,6 @@ In the following example, the user's first name is updated to "Test".
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.update({ firstName: "Test" })
       }
     });
   </script>
@@ -157,7 +169,15 @@ function delete: () => Promise<void>;
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.delete()
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -165,8 +185,6 @@ function delete: () => Promise<void>;
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.delete();
   }
   ```
 
@@ -175,7 +193,15 @@ function delete: () => Promise<void>;
     window.addEventListener('load', async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.delete()
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -183,8 +209,6 @@ function delete: () => Promise<void>;
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.delete();
       }
     });
   </script>
@@ -289,7 +313,15 @@ function getSessions: () => Promise<SessionWithActivities[]>;
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.getSessions()
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -297,8 +329,6 @@ function getSessions: () => Promise<SessionWithActivities[]>;
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.getSessions();
   }
   ```
 
@@ -307,7 +337,15 @@ function getSessions: () => Promise<SessionWithActivities[]>;
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.getSessions()
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -315,8 +353,6 @@ function getSessions: () => Promise<SessionWithActivities[]>;
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.getSessions();
       }
     });
   </script>
@@ -373,7 +409,15 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.getOrganizationInvitations()
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -381,8 +425,6 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.getOrganizationInvitations();
   }
   ```
 
@@ -391,7 +433,15 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.getOrganizationInvitations()
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -399,8 +449,6 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.getOrganizationInvitations();
       }
     });
   </script>
@@ -443,7 +491,15 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.getOrganizationSuggestions()
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -451,8 +507,6 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.getOrganizationSuggestions();
   }
   ```
 
@@ -461,7 +515,15 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.getOrganizationSuggestions()
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -469,8 +531,6 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.getOrganizationSuggestions();
       }
     });
   </script>
@@ -512,7 +572,15 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
   const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  if (!clerk.user) {
+  if (clerk.user) {
+    await clerk.user.getOrganizationMemberships()
+      .then((res) => {
+        console.log(res);
+      })
+      .catch((error) => {
+        console.log("An error occurred:", error.errors);
+      });
+  } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
     `;
@@ -520,8 +588,6 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
     const signInDiv = document.getElementById("sign-in");
 
     clerk.mountSignIn(signInDiv);
-  } else {
-    await clerk.user.getOrganizationMemberships();
   }
   ```
 
@@ -530,7 +596,16 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (!Clerk.user) {
+      if (Clerk.user) {
+        await Clerk.user.getOrganizationMemberships()
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((error) => {
+            console.log("An error occurred:", error.errors);
+          });
+
+      } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
         `;
@@ -538,8 +613,6 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
         const signInDiv = document.getElementById("sign-in");
 
         Clerk.mountSignIn(signInDiv);
-      } else {
-        await Clerk.user.getOrganizationMemberships();
       }
     });
   </script>
