--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -94,7 +94,7 @@ In the following example, the user's first name is updated to "Test".
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -120,7 +120,19 @@ In the following example, the user's first name is updated to "Test".
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener('load', async function () {
       await Clerk.load();
@@ -162,7 +174,7 @@ function delete: () => Promise<void>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -188,7 +200,19 @@ function delete: () => Promise<void>;
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener('load', async function () {
       await Clerk.load();
@@ -264,7 +288,7 @@ function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js"
+  ```js filename="main.js" {7}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -274,7 +298,17 @@ function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
   await clerk.user.reload();
   ```
 
-  ```html filename="index.html"
+  ```html filename="index.html" {15}
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -306,7 +340,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -332,7 +366,19 @@ function getSessions: () => Promise<SessionWithActivities[]>;
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -402,7 +448,7 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -428,7 +474,19 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -484,7 +542,7 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -510,7 +568,19 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -565,7 +635,7 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```js filename="main.js" {16}
+  ```js filename="main.js" {8}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -591,7 +661,19 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
   }
   ```
 
-  ```html filename="index.html" {14}
+  ```html filename="index.html" {18}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
