break down codeblocktabs example

--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -193,7 +193,8 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
   <Tab>
-    <CodeBlockTabs options={["main.js", "index.html"]}>
+    For the following example, your HTML file should look like this:
+
     ```js filename="main.js"
     import Clerk from '@clerk/clerk-js';
 
@@ -228,6 +229,8 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
     }
     ```
 
+    And your HTML file should look like this:
+
     ```html filename="index.html"
     <!doctype html>
     <html lang="en">
@@ -252,7 +255,6 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
       </body>
     </html>
     ```
-    </CodeBlockTabs>
   </Tab>
 
   <Tab>
