pare down nextjs quickstart

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -5,29 +5,6 @@ description: Add authentication and user management to your Next.js app with Cle
 
 # Next.js Quickstart
 
-<TutorialHero
-  framework="nextjs"
-  beforeYouStart={[
-    {
-      title: "Set up a Clerk application",
-      link: "https://clerk.com/docs/quickstarts/setup-clerk",
-    },
-    {
-      title: "Create a Next.js application",
-      link: "https://nextjs.org/docs/getting-started/installation",
-    },
-  ]}
->
-
-- Install `@clerk/nextjs`
-- Set up your environment variables
-- Wrap your Next.js app in `<ClerkProvider />`
-- Limit access to authenticated users
-- Specify which routes are publicly accessible
-- Enable users to manage their session with `<UserButton />`
-
-</TutorialHero>
-
 <Callout type='info' emoji='💡'>
   The next major version of the Clerk Next.js SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/nextjs) instead.
 </Callout>
@@ -36,9 +13,7 @@ description: Add authentication and user management to your Next.js app with Cle
 
 ### Install `@clerk/nextjs`
 
-Clerk's [Next.js SDK](/docs/references/nextjs/overview) has prebuilt components, React hooks, and helpers to make user authentication easier.
-
-To get started using Clerk with Next.js, add the SDK to your project:
+Install Clerk's [Next.js SDK](/docs/references/nextjs/overview) into your existing project with your preferred package manager.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
@@ -57,11 +32,7 @@ pnpm add @clerk/nextjs
 
 ### Set your environment variables
 
-1. If you are signed into Clerk, the following `.env.local` snippet will contain your keys. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
-
-1. Add your keys to your `.env.local` file.
-
-The final result should resemble the following:
+Add the required Clerk environment variables to your project by creating or editing your `.env.local` file.
 
   <InjectKeys>
 
@@ -72,11 +43,9 @@ The final result should resemble the following:
 
   </InjectKeys>
 
-### Add `<ClerkProvider>` to your app
+### Wrap your app with the `<ClerkProvider>`
 
-All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs/components/clerk-provider) component, which provides active session and user context.
-
-Select your preferred router to learn how to make this data available across your entire app:
+The `<ClerkProvider />` provides session and user context to your application
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
   ```tsx filename="/src/app/layout.tsx" {1,10-14}
@@ -114,16 +83,9 @@ Select your preferred router to learn how to make this data available across you
 
 </CodeBlockTabs>
 
-### Add authentication to your app
+### Use middleware to protect your application
 
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
-
-1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
-2. In your `middleware.ts` file, export Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware) helper. This helper enables authentication and blocks access for signed out visitors on routes that your middleware runs on.
-
-
-
-    Next.js middleware only runs on routes specified with [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your routes:
+Create or edit your `middleware.ts` file to include the [`clerkMiddleware()`](/docs/references/nextjs/auth-middleware) helper. Clerk's helpers allow you to selectively configure which routes are protected.
 
     ```tsx filename="middleware.ts"
     import { authMiddleware } from "@clerk/nextjs";
@@ -151,69 +113,12 @@ Now that Clerk is installed and mounted in your application, you can decide whic
     };
     ```
 
-<Callout type="info">
-  See the [`authMiddleware()`](/docs/references/nextjs/auth-middleware#default-behaviour) docs to learn more about `publicRoutes` and `ignoredRoutes`.
-</Callout>
+### 🚀 Sign in to your application
 
-### Try accessing your app
+Run `npm run dev` and visit one of your protected URLs and login to your application. It's that easy
 
-Access your app to verify that authentication is enabled:
-
-1. Run your project with the following terminal command from the root directory of your project:
-  <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-    ```bash filename="terminal"
-    npm run dev
-    ```
-
-    ```bash filename="terminal"
-    yarn dev
-    ```
-
-    ```bash filename="terminal"
-    pnpm dev
-    ```
-
-  </CodeBlockTabs>
-2. Visit [`http://localhost:3000`](http://localhost:3000) to access your app. The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature.
-3. Sign up to gain access to your application.
-
-### Embed the `<UserButton />`
-
-[`<UserButton />`](/docs/components/user/user-button) is a [prebuilt component](/docs/components/overview) that allows users to sign in, log out, and manage their account information.
-
-Use the following code to add a `<UserButton />` to your app:
-
-<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" {1,6}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div className="h-screen">
-      <UserButton />
-    </div>
-  )
-}
-```
-
-```tsx filename="pages/index.tsx" {1,7}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <>
-      <header>
-        <UserButton />
-      </header>
-      <div>Your home page's content can go here.</div>
-    </>
-  );
-}
-```
-
-</CodeBlockTabs>
-
-Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) to see the `<UserButton />` in action. It should show your avatar from the account you signed in with.
+#### Next Steps
+Clerk also offers a set of powerful [UI Components](/docs/components/overview) that add can functionality to your app with minimal effort. For example, the [`<UserButton />`](/docs) allows signed in users to manage their account information and log out
 
 </Steps>
 
