use core-2 middleware

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -88,28 +88,12 @@ The `<ClerkProvider />` provides session and user context to your application
 Create or edit your `middleware.ts` file to include the [`clerkMiddleware()`](/docs/references/nextjs/auth-middleware) helper. Clerk's helpers allow you to selectively configure which routes are protected.
 
     ```tsx filename="middleware.ts"
-    import { authMiddleware } from "@clerk/nextjs";
-
-    // See https://clerk.com/docs/references/nextjs/auth-middleware
-    // for more information about configuring your Middleware
-
-    export default authMiddleware({
-      // Allow signed out users to access the specified routes:
-      // publicRoutes: ['/anyone-can-visit-this-route'],
-      // Prevent the specified routes from accessing
-      // authentication information:
-      // ignoredRoutes: ['/no-auth-in-this-route'],
-    });
-
+    import { clerkMiddleware } from "@clerk/nextjs/server";
+ 
+    export default clerkMiddleware();
+    
     export const config = {
-      matcher: [
-        // Exclude files with a "." followed by an extension, which are typically static files.
-        // Exclude files in the _next directory, which are Next.js internals.
-
-        "/((?!.+\\.[\\w]+$|_next).*)",
-        // Re-include any files in the api or trpc folders that might have an extension
-        "/(api|trpc)(.*)"
-      ]
+      matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
     };
     ```
 
