--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -1,11 +1,11 @@
 ---
 title: Organization
-description: This is a class that represents an organziation. It's returned from the createOrganization and getOrganization methods on the Clerk class instance.
+description: The Organization object holds information about an organization, as well as methods for managing it.
 ---
 
 # `Organization`
 
-This is a class that represents an organization. It's returned from the [`createOrganization`](/docs/references/javascript/clerk/organization-methods#create-organization) and [`getOrganization`](/docs/references/javascript/clerk/organization-methods#get-organization) methods on [the `Clerk` class instance](/docs/references/javascript/clerk/clerk).
+The `Organization` object holds information about an organization, as well as methods for managing it. It's returned from the [`Clerk.createOrganization()`](/docs/references/javascript/clerk/organization-methods#create-organization) and [`Clerk.getOrganization()`](/docs/references/javascript/clerk/organization-methods#get-organization) methods.
 
 ## Properties
 
@@ -42,23 +42,23 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 | `name` | `string` | The organization name. |
 | `slug?` | `string \| undefined` | The organization slug. |
 
-#### Returns
+#### `update()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
 
 ### `destroy()`
 
 Deletes the organization. Only administrators can delete an organization.
 
-Please note that deleting an organization will also delete all memberships and invitations. This is not reversible.
+Deleting an organization will also delete all memberships and invitations. **This is not reversible.**
 
 ```typescript
 function destroy(): Promise<void>;
 ```
 
-#### Returns
+#### `destroy()` returns
 
 | Type | Description |
 | --- | --- |
@@ -78,11 +78,11 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 | --- | --- | --- |
 | `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
-#### Returns
+#### `setLogo()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
 
 ### `getRoles()`
 
@@ -103,7 +103,7 @@ function getRoles: (params?: GetRolesParams) => Promise<ClerkPaginatedResponse<R
 
 | Type | Description |
 | --- | --- |
-| `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
+| `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
 
 #### `RoleResource`
 
@@ -134,7 +134,7 @@ An *experimental* interface that includes information about a user's permission.
 
 ## Additional methods
 
-In addition to the methods listed above, the [`Organization`][org-ref] class also has the following methods:
+In addition to the methods listed above, the `Organization` class also has the following methods:
 
 ### Members
 
@@ -146,7 +146,7 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-- [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations) (deprecated in favor of `getInvitations()`)
+- [`getPendingInvitations()` (deprecated)](/docs/references/javascript/organization/invitations#get-pending-invitations)
 - [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 - [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 - [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
@@ -155,5 +155,3 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 - [`getDomains()`](/docs/references/javascript/organization/domains#get-domains)
 - [`getDomain()`](/docs/references/javascript/organization/domains#get-domain)
 - [`createDomain()`](/docs/references/javascript/organization/domains#create-domain)
-
-[org-ref]: /docs/references/javascript/organization/organization
