--- a/docs/authentication/configuration/sign-up-sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-up-sign-in-options.mdx
@@ -5,7 +5,7 @@ description: Clerk provides various options for setting up a sign-up and sign-in
 
 # Sign-up and sign-in options
 
-Clerk provides various options for setting up a sign-in and sign-up flow. When a new application is created, you will be presented with the following application configuration screen:
+Clerk provides various options for setting up a sign-up and sign-in flow. When a new application is created, you will be presented with the following application configuration screen:
 
 <Images
 width={1879}
@@ -14,7 +14,7 @@ src="/docs/images/setup-clerk/create-sign-in-comp.png"
 alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
 />
 
-You can always make changes to your sign-in and sign-up options after your application has been created by visiting the [Clerk Dashboard](https://dashboard.clerk.com/) and selecting the **User & Authentication** dropdown in the navigation sidebar.
+You can always make changes to your sign-up and sign-in options after your application has been created by visiting the [Clerk Dashboard](https://dashboard.clerk.com/) and selecting the **User & Authentication** dropdown in the navigation sidebar.
 
 In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#identifiers), [authentication strategies](#authentication-strategies), [verification methods](#verification-methods), [social login providers](##social-connections-o-auth), [Web3 authentication](#web3-authentication), [multi-factor authentication](#set-up-multi-factor-authentication), and [sign-up restrictions](#sign-up-restrictions). This guide will walk you through each of these options.
 
