apply changes button was updated in the dashboard

--- a/docs/authentication/configuration/sign-up-sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-up-sign-in-options.mdx
@@ -165,7 +165,7 @@ Ensure that *only* **Email address** is enabled as an identifier.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle on the **Email address** option. (Make sure the **Phone number** option and any social connections are toggled off.)
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 Users can now sign up and sign in with their email.
 
@@ -213,7 +213,7 @@ Ensure that *only* **Phone number** is enabled as an identifier.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle on the **Phone number** option. (Make sure the **Email address** option and any social connections are toggled off.)
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 Users can now sign up and sign in with their phone number.
 
@@ -257,7 +257,7 @@ Users won't need an email or password, so you can turn those off.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle *off* the **Email address** and **Phone number** options.
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 ### Enable social connections as authentication options
 
