--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -5,7 +5,7 @@ description: The Organization object holds information about an organization, as
 
 # `Organization`
 
-The `Organization` object holds information about an organization, as well as methods for managing it. It's returned from the [`Clerk.createOrganization()`](/docs/references/javascript/clerk/organization-methods#create-organization) and [`Clerk.getOrganization()`](/docs/references/javascript/clerk/organization-methods#get-organization) methods.
+The `Organization` object holds information about an organization, as well as methods for managing it.
 
 ## Properties
 
@@ -48,6 +48,77 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 | --- | --- |
 | `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
 
+#### `update()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Get the current organization
+  const currentOrganization = clerk.organization;
+
+  // Update the organization's name
+  currentOrganization.update({ name: "New Name" })
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Get the current organization
+        const currentOrganization = Clerk.organization;
+
+        // Update the organization's name
+        currentOrganization.update({ name: "New Name" })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `destroy()`
 
 Deletes the organization. Only administrators can delete an organization.
@@ -64,9 +135,80 @@ function destroy(): Promise<void>;
 | --- | --- |
 | `Promise<void>` | This method returns a `Promise` which doesn't resolve to any value. |
 
+#### `destroy()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Get the current organization
+  const currentOrganization = clerk.organization;
+
+  // Deletes the organization
+  currentOrganization.delete()
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Get the current organization
+        const currentOrganization = Clerk.organization;
+
+        // Deletes the organization
+        currentOrganization.delete()
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `setLogo()`
 
-Sets or replaces an organization's logo.  Accept the logo as a file or blob. The logo must be an image and its  size cannot exceed 10MB.
+Sets or replaces an organization's logo. The logo must be an image and its size cannot exceed 10MB.
 
 ```typescript
 function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
@@ -76,13 +218,124 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
+| `file` | `File \| Blob \| null` | An image file or blob which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
 #### `setLogo()` returns
 
 | Type | Description |
 | --- | --- |
 | `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
+
+#### `setLogo()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <input type="file" id="org-logo" />
+        <button id="upload-logo">Upload Logo</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      // Get the current organization
+      const currentOrganization = clerk.organization;
+
+      // Update the organization's logo
+      document.getElementById("upload-logo").addEventListener("click", () => {
+        const orgLogo = document.getElementById("org-logo").files[0];
+        console.log(orgLogo);
+
+        currentOrganization.setLogo({ file: orgLogo })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      });
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html"
+    <div id="app"></div>
+
+    <input type="file" id="org-logo" />
+    <button id="upload-logo">Upload Logo</button>
+
+    <!-- Initialize Clerk with your
+    Clerk publishable key and Frontend API URL -->
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
+        if (Clerk.user) {
+          // Get the current organization
+          const currentOrganization = Clerk.organization;
+
+          // Update the organization's logo
+          document.getElementById("upload-logo").addEventListener("click", () => {
+            const orgLogo = document.getElementById("org-logo").files[0];
+
+            currentOrganization.setLogo({ file: orgLogo })
+              .then((res) => console.log(res))
+              .catch((error) => console.log("An error occurred:", error.errors));
+          });
+        } else {
+          document.getElementById("app").innerHTML = `
+            <div id="sign-in"></div>
+          `;
+
+          const signInDiv = document.getElementById("sign-in");
+
+          Clerk.mountSignIn(signInDiv);
+        }
+      });
+    </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 ### `getRoles()`
 
@@ -104,6 +357,77 @@ function getRoles: (params?: GetRolesParams) => Promise<ClerkPaginatedResponse<R
 | Type | Description |
 | --- | --- |
 | `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
+
+#### `getRoles()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Get the current organization
+  const currentOrganization = clerk.organization;
+
+  // Gets a list of roles in the organization
+  currentOrganization.getRoles()
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Get the current organization
+        const currentOrganization = Clerk.organization;
+
+        // Gets a list of roles in the organization
+        currentOrganization.getRoles()
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 #### `RoleResource`
 
