--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -167,11 +167,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
 
     if (clerk.user) {
       // Create and verify TOTP
-      document
-        .getElementById("create-totp")
+      document.getElementById("create-totp")
         .addEventListener("click", async () => {
-          clerk.user
-            .createTOTP()
+          clerk.user.createTOTP()
             .then((res) => {
               // Show the TOTP container with the secret and verify button
               document.getElementById("totp-container").removeAttribute("hidden");
@@ -180,8 +178,7 @@ The following example demonstrates how to use the TOTP methods to create and ver
               document.getElementById("totp-secret").innerHTML = res.secret;
 
               // Add event listener to verify TOTP button
-              document
-                .getElementById("verify-totp")
+              document.getElementById("verify-totp")
                 .addEventListener("click", async () => {
                   const code = document.getElementById("totp-code").value;
                   clerk.user
@@ -207,11 +204,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
       });
 
       // Disable TOTP
-      document
-        .getElementById("disable-totp")
+      document.getElementById("disable-totp")
         .addEventListener("click", async () => {
-          clerk.user
-            .disableTOTP()
+          clerk.user.disableTOTP()
             .then((res) => {
               document.getElementById("response").innerHTML = JSON.stringify(res);
             })
@@ -224,11 +219,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
         });
 
       // Create backup codes
-      document
-        .getElementById("create-backup-codes")
+      document.getElementById("create-backup-codes")
         .addEventListener("click", async () => {
-          clerk.user
-            .createBackupCode()
+          clerk.user.createBackupCode()
             .then((res) => {
               document.getElementById("response").innerHTML = JSON.stringify(res);
             })
@@ -295,11 +288,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
         await Clerk.load();
         if (Clerk.user) {
           // Create and verify TOTP
-          document
-            .getElementById("create-totp")
+          document.getElementById("create-totp")
             .addEventListener("click", async () => {
-              Clerk.user
-                .createTOTP()
+              Clerk.user.createTOTP()
                 .then((res) => {
                   // Show the TOTP container with the secret and verify button
                   document.getElementById("totp-container").removeAttribute("hidden");
@@ -308,8 +299,7 @@ The following example demonstrates how to use the TOTP methods to create and ver
                   document.getElementById("totp-secret").innerHTML = res.secret;
 
                   // Add event listener to verify TOTP button
-                  document
-                    .getElementById("verify-totp")
+                  document.getElementById("verify-totp")
                     .addEventListener("click", async () => {
                       const code = document.getElementById("totp-code").value;
                       Clerk.user
@@ -335,11 +325,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
           });
 
           // Disable TOTP
-          document
-            .getElementById("disable-totp")
+          document.getElementById("disable-totp")
             .addEventListener("click", async () => {
-              Clerk.user
-                .disableTOTP()
+              Clerk.user.disableTOTP()
                 .then((res) => {
                   document.getElementById("response").innerHTML = JSON.stringify(res);
                 })
@@ -352,11 +340,9 @@ The following example demonstrates how to use the TOTP methods to create and ver
             });
 
           // Create backup codes
-          document
-            .getElementById("create-backup-codes")
+          document.getElementById("create-backup-codes")
             .addEventListener("click", async () => {
-              Clerk.user
-                .createBackupCode()
+              Clerk.user.createBackupCode()
                 .then((res) => {
                   document.getElementById("response").innerHTML = JSON.stringify(res);
                 })
